SONARPY-1428 Migrate from JUnit4 to JUnit5